	(DONE) Saving state of Showbars in config file everytime where is changed
	(DONE) oneclick document opening
	(DONE) filter separating ex.: "*.c;*.cpp;*.h"
	* Fix possible memory leaks (using g_free... where is need)
	* Complete following path from current document view
	(DONE) Hide object files as native filebroser (*.o;*.a;*.so;*.dll;*.lib..)
	(DONE) Using font from geany settings for sidebar
	* Migrating to stash
	(DONE) Adding keybindings for renaming/deleting/refreshing
	(DONE) Add option to change bars position // requested by <dmaphy>
	(DONE) Add option to autorename point the newest created objects by the Treebrowser


+-------------------------------+
| Development release ChangeLog |
+-------------------------------+


01-11-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		Added dialog question when creating/removing file, to prevent from losing
			target files if they exists.


01-10-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* ChangeLog
		Revision 1688, Modified Thu Oct 28 21:02:33 2010 UTC by colombanw

		Build system: don't force building the Treebrowser plugin

		If the dependencies of the Treebrowser plugin are not met, simply
		disable the plugin rather than abort the whole build.

		Also add checks for creat(), sys/types.h, sys/stat.h and fcntl.h, and
		fix the check for GIO to correctly handle the case it's not available.


25-10-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		Fixed wrong expaned status of the directories


17-10-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		Fixed order of includes with gio.h
			(Patch by Enrico Troger)


17-10-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		Fixed memory leaks
			(Patch by Colomban Wendling)
		Fixed missing GIcon compilation error in gtk versions before 2.14
		Fixed some compilation warnings on unused variables
		Fixed translation string _("Empty") to be _("(Empty)")

